tests/suite/snapshots/suite__check__tests__check__bad_primitive_1.xi.snap
---
source: tests/suite/check.rs
assertion_line: 35
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad_primitive_1.xi:2:13]
   │
 2 │     x:int = false
   ·     ──┬──   ──┬──  
   ·       ╰──────────── Expected int because of this
   ·               │    
   ·               ╰──── Expected int but found bool
───╯

